@@ -47,23 +47,10 @@ WebKitBuildbot = function()
         "Apple Sierra Debug WK2 (Tests)": {platform: Dashboard.Platform.macOSSierra, debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
         "Apple Sierra Release WK1 (Tests)": {platform: Dashboard.Platform.macOSSierra, debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit1},
         "Apple Sierra Release WK2 (Tests)": {platform: Dashboard.Platform.macOSSierra, debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
-        "Apple El Capitan Debug (Build)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: true, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
-        "Apple El Capitan Release (Build)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: false, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
-        "Apple El Capitan Release (32-bit Build)": {platform: Dashboard.Platform.MacOSXElCapitan, builder: true, architecture: Buildbot.BuildArchitecture.ThirtyTwoBit},
-        "Apple El Capitan Debug WK1 (Tests)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit1},
-        "Apple El Capitan Debug WK2 (Tests)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: true, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
-        "Apple El Capitan Release WK1 (Tests)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit1},
-        "Apple El Capitan Release WK2 (Tests)": {platform: Dashboard.Platform.MacOSXElCapitan, debug: false, tester: true, testCategory: Buildbot.TestCategory.WebKit2},
         "Apple Sierra Release WK2 (Perf)": {platform: Dashboard.Platform.macOSSierra, debug: false, performance: true, heading: "Performance"},
         "Apple Sierra JSC": {platform: Dashboard.Platform.macOSSierra, heading: "JavaScript", combinedQueues: {
             "Apple Sierra Debug Test262 (Tests)": {heading: "Debug Test262 (Tests)"},
             "Apple Sierra Release Test262 (Tests)": {heading: "Release Test262 (Tests)"},
-        }},
-        "Apple El Capitan JSC": {platform: Dashboard.Platform.MacOSXElCapitan, heading: "JavaScript", combinedQueues: {
-            "Apple El Capitan 32-bit JSC (BuildAndTest)": {heading: "32-bit JSC (BuildAndTest)"},
-            "Apple El Capitan LLINT CLoop (BuildAndTest)": {heading: "LLINT CLoop (BuildAndTest)"},
-            "Apple El Capitan Debug JSC (Tests)": {heading: "Debug JSC (Tests)"},
-            "Apple El Capitan Release JSC (Tests)": {heading: "Release JSC (Tests)"},
         }},
         "Apple iOS 11 Release (Build)": {platform: Dashboard.Platform.iOS11Device, debug: false, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
         "Apple iOS 11 Simulator Release (Build)": {platform: Dashboard.Platform.iOS11Simulator, debug: false, builder: true, architecture: Buildbot.BuildArchitecture.SixtyFourBit},
