@@ -1,3 +1,15 @@
+2018-01-18  Ling Ho  <lingcherd_ho@apple.com>
+
+        Remove Opensource El Capitan queues from buildbot
+        https://bugs.webkit.org/show_bug.cgi?id=181712
+
+        Reviewed by Aakash Jain.
+
+        * BuildSlaveSupport/build.webkit.org-config/config.json:
+        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/WebKitBuildbot.js:
+        (WebKitBuildbot):
+        * BuildSlaveSupport/build.webkit.org-config/steps_unittest.py:
+
 2018-01-18  Chris Dumez  <cdumez@apple.com>
 
         Service Workers restored from persistent storage have 'redundant' state
